2005-10-23  Michael Albinus  <michael.albinus@gmx.de>

	* configure.ac: Bump version (to 2.1.5-pre).

	* Makefile.in (clean): Cleanup also subdirectory test.
	(MANIFEST): Exclude tramp2 and .cvsignore.

2005-10-18  Michael Albinus  <michael.albinus@gmx.de>

	* aclocal.m4 (AC_PATH_LISPDIR, AC_PATH_INFODIR): `datadir',
	`lispdir' and `infodir' should still contain environment
	variables, which can be changed during make. `lispdir_default' and
	`infodir_default' must be expanded for the Tramp manual.

2005-10-13  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.4 released.

	* configure.ac: Bump version.

2005-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* aclocal.m4 (AC_PATH_LISPDIR, AC_PATH_INFODIR): Rearrange
	substitutions that they are accepted with older shell versions.

2005-10-11  Steve Youngs  <steve@sxemacs.org>

	* Makefile.XEmacs (REQUIRES): Remove fsf-compat, add
	sh-script (for executable-find).

2005-10-09  Michael Albinus  <michael.albinus@gmx.de>

	* INSTALL: Provide working options for installing on MS Windows.

2005-08-28  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in: Replace trampcache.el by tramp-cache.el.

2005-07-10  Michael Albinus  <michael.albinus@gmx.de>

	Update FSF's address in GPL notices.

2005-03-20  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (FTP_UPLOAD): Change upload address to
	"ftp://ftp-upload.gnu.org/incoming/ftp".
	(tar): Handle "$(TARNAME).tar.gz.directive".

2005-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* INSTALL: Replace "Linux" by "GNU/Linux".  Suggested by Richard
	M. Stallman <rms@gnu.org>

	* aclocal.m4 (AC_PATH_LISPDIR): Document an alternative approach
	configuring `lispdir'.  Not activated (yet).

	* configure.ac: Documentation fix.

2005-02-09  Kim F. Storm  <storm@cua.dk>

	Change release version from 21.4 to 22.1 throughout.

2005-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* INSTALL: Explain in more detail configure parameters