@@ -139,13 +139,6 @@ AC_SUBST(lispdir_default)
 AC_SUBST(infodir)
 AC_SUBST(infodir_default)
 
-
-# Create local info directory.
-if test ! -d info; then
-   AC_MSG_NOTICE([creating info/])
-   AS_MKDIR_P([info])
-fi
-
 # Check whether ftp-upload is available.  Necessary for maintainers only;
 # therefore there is no error or warning.
 AC_CHECK_PROG([FTP_UPLOAD], [ftp-upload], [yes], [no])
